Adding functionality to clear the CLFR flag on the rep order. Adding some of the common data enums/libraries for use.